--- a/react_sass/src/styles/components/app.sass
+++ b/react_sass/src/styles/components/app.sass
@@ -5,6 +5,7 @@
     flex-wrap: wrap
     padding: 3rem
     gap: 3rem
+
     h1
         width: 100%
         font-size: 5rem
@@ -12,3 +13,4 @@
         background: variables.$gradient
         -webkit-background-clip: text
         -webkit-text-fill-color: transparent
+        padding-bottom: 40px
